<resources>
    <string name="app_name">Quiz</string>
    <string name="applicationName">Викторина</string>
    <string name="buttonStart">Играть</string>
    <string name="buttonRegistration">Регистрация</string>
    <string name="enterYourName">Имя</string>
    <string name="enterYourPassword">Пароль</string>
    <string name="enterCorrectForm">Этот логин уже занят</string>
    <string name="buttonMathematics">Математика</string>
    <string name="buttonGeography">География</string>
    <string name="buttonPhysics">Физика</string>
    <string name="buttonBiology">Биология</string>
    <string name="restart">Вы\nуверены,\nчто\nхотите\nпереиграть\nуровни?</string>
    <string name="diagram">Статистика</string>
    <string name="totalLevels">Уровней:</string>
    <string name="decided">Решено:</string>
    <string name="errors">Ошибок:</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="timeOut">Время вышло</string>
    <string name="hurryUp">Поторопись</string>
    <string name="level1">1</string>
    <string name="level2">2</string>
    <string name="level3">3</string>
    <string name="level4">4</string>
    <string name="level5">5</string>
    <string name="level6">6</string>
    <string name="level7">7</string>
    <string name="level8">8</string>
    <string name="level9">9</string>
    <string name="level10">10</string>
    <string name="level11">11</string>
    <string name="level12">12</string>
    <string name="level13">13</string>
    <string name="level14">14</string>
    <string name="level15">15</string>
    <string name="level16">16</string>
    <string name="level17">17</string>
    <string name="level18">18</string>
    <string name="level19">19</string>
    <string name="level20">20</string>
    <string name="Easy">Легкий</string>
    <string name="Normal">Средний</string>
    <string name="Hard">Сложный</string>
    <string name="Back">❮</string>
    <string name="MonTrue1">Супер!</string>
    <string name="MonTrue2">Так держать!</string>
    <string name="MonTrue3">У тебя отлично получается!</string>
    <string name="MonTrue4">Тебя не остановить!</string>
    <string name="MonTrue5">Класс!</string>
    <string name="MonTrue6">Верно</string>
    <string name="MonFalse1">Подумай еще...</string>
    <string name="MonFalse2">У тебя обязательно получится!</string>
    <string name="MonFalse3">Не сдавайся!</string>
    <string name="MonFalse4">Очень близко!</string>
    <string name="MonFalse5">Ты на верном пути</string>
    <string name="MonFalse6">Постарайся лучше</string>
    <string name="activityEasyMathLevelWork1">Чему\nравна\nчетверть\nчаса?</string>
    <string name="activityEasyMathLevelAns1">10 минут</string>
    <string name="activityEasyMathLevelAns2">15 минут</string>
    <string name="activityEasyMathLevelAns3">25 минут</string>
    <string name="activityEasyMathLevelAns4">30 минут</string>
    <string name="textMathEasyNumLvl1">Уровень 1</string>
    <string name="activityEasyMathLevelWork2">Каким\nприбором\nизмеряют\nуглы?</string>
    <string name="activityEasyMathLevel2Ans1">Транспортир</string>
    <string name="activityEasyMathLevel2Ans2">Угольник</string>
    <string name="activityEasyMathLevel2Ans3">Циркуль</string>
    <string name="activityEasyMathLevel2Ans4">Линейка</string>
    <string name="textMathEasyNumLvl2">Уровень 2</string>
    <string name="activityEasyMathLevelWork3">Посчитайте:\n4+4*4+4=?</string>
    <string name="activityEasyMathLevel3Ans1">24</string>
    <string name="activityEasyMathLevel3Ans2">34</string>
    <string name="activityEasyMathLevel3Ans3">16</string>
    <string name="activityEasyMathLevel3Ans4">64</string>
    <string name="textMathEasyNumLvl3">Уровень 3</string>
    <string name="activityEasyMathLevelWork4">Сколько\nсекунд\nв двух\nсутках?</string>
    <string name="activityEasyMathLevel4Ans1">172800</string>
    <string name="activityEasyMathLevel4Ans2">86400</string>
    <string name="activityEasyMathLevel4Ans3">43200</string>
    <string name="activityEasyMathLevel4Ans4">21600</string>
    <string name="textMathEasyNumLvl4">Уровень 4</string>
    <string name="activityEasyMathLevelWork5">Сколько\nмесяцев\nв году\nимеют\n28 дней?</string>
    <string name="activityEasyMathLevel5Ans1">2</string>
    <string name="activityEasyMathLevel5Ans2">4</string>
    <string name="activityEasyMathLevel5Ans3">7</string>
    <string name="activityEasyMathLevel5Ans4">12</string>
    <string name="textMathEasyNumLvl5">Уровень 5</string>
    <string name="activityEasyMathLevelWork6">Какие\nиз чисел\nявляются\nпростыми?</string>
    <string name="activityEasyMathLevel6Ans1">2, 3, 5, 7</string>
    <string name="activityEasyMathLevel6Ans2">2, 4, 6, 8</string>
    <string name="activityEasyMathLevel6Ans3">1, 3, 5, 9</string>
    <string name="activityEasyMathLevel6Ans4">0, 4, 6, 10</string>
    <string name="textMathEasyNumLvl6">Уровень 6</string>
    <string name="activityEasyMathLevelWork7">Число\n-6 являестся\nцелым?</string>
    <string name="activityEasyMathLevel7Ans1">Правда</string>
    <string name="activityEasyMathLevel7Ans2">Ложь</string>
    <string name="textMathEasyNumLvl7">Уровень 7</string>
    <string name="activityEasyMathLevelWork8">Чему\nравно\n10 в\nстепени 0?</string>
    <string name="activityEasyMathLevel8Ans1">-1</string>
    <string name="activityEasyMathLevel8Ans2">1</string>
    <string name="activityEasyMathLevel8Ans3">10</string>
    <string name="activityEasyMathLevel8Ans4">0</string>
    <string name="textMathEasyNumLvl8">Уровень 8</string>
    <string name="activityEasyMathLevelWork9">9*7=?</string>
    <string name="activityEasyMathLevel9Ans1">-54</string>
    <string name="activityEasyMathLevel9Ans2">56</string>
    <string name="activityEasyMathLevel9Ans3">42</string>
    <string name="activityEasyMathLevel9Ans4">63</string>
    <string name="textMathEasyNumLvl9">Уровень 9</string>
    <string name="activityEasyMathLevelWork10">Если\nот 100\nотнять\n28, то\nрезультат\nбудет\nв 8 раз\nбольше\nчисла…</string>
    <string name="activityEasyMathLevel10Ans1">6</string>
    <string name="activityEasyMathLevel10Ans2">8</string>
    <string name="activityEasyMathLevel10Ans3">9</string>
    <string name="activityEasyMathLevel10Ans4">7</string>
    <string name="activityEasyMathLevelWork11">Найдите\nзакономерность:\n22, 19, 17, 14, 12, 9…</string>
    <string name="activityEasyMathLevel11Ans1">7, 4</string>
    <string name="activityEasyMathLevel11Ans2">6, 4</string>
    <string name="activityEasyMathLevel11Ans3">6, 3</string>
    <string name="activityEasyMathLevel11Ans4">7, 5</string>
    <string name="textMathEasyNumLvl11">Уровень 11</string>
    <string name="activityEasyMathLevelWork12">60 листов\nкниги\nимеют\nтолщину 1 см.\nКакова\nтолщина\nкниги\nиз 240\nстраниц?</string>
    <string name="activityEasyMathLevel12Ans1">5 см.</string>
    <string name="activityEasyMathLevel12Ans2">3 см.</string>
    <string name="activityEasyMathLevel12Ans3">4 см.</string>
    <string name="activityEasyMathLevel12Ans4">2 см.</string>
    <string name="textMathEasyNumLvl12">Уровень 12</string>
    <string name="activityEasyMathLevelWork13">Какое\nцелое\nчисло\nделится\nбез\nостатка\nна любое\nнатуральное\nчисло?</string>
    <string name="activityEasyMathLevel13Ans1">2</string>
    <string name="activityEasyMathLevel13Ans2">-1</string>
    <string name="activityEasyMathLevel13Ans3">0</string>
    <string name="activityEasyMathLevel13Ans4">1</string>
    <string name="textMathEasyNumLvl13">Уровень 13</string>
    <string name="activityEasyMathLevelWork14">Найди\nзначение\nx:\nx–12–10+14=80</string>
    <string name="activityEasyMathLevel14Ans1">88</string>
    <string name="activityEasyMathLevel14Ans2">92</string>
    <string name="activityEasyMathLevel14Ans3">86</string>
    <string name="activityEasyMathLevel14Ans4">84</string>
    <string name="textMathEasyNumLvl14">Уровень 14</string>
    <string name="activityEasyMathLevelWork15">Сколько\nсторон у\nдевятиугольника?</string>
    <string name="activityEasyMathLevel15Ans1">9</string>
    <string name="activityEasyMathLevel15Ans2">8</string>
    <string name="activityEasyMathLevel15Ans3">10</string>
    <string name="activityEasyMathLevel15Ans4">11</string>
    <string name="textMathEasyNumLvl15">Уровень 15</string>
    <string name="activityEasyMathLevelWork16">Как\nназывается\nрезультат\nвычитания?</string>
    <string name="activityEasyMathLevel16Ans1">Вычитаемое</string>
    <string name="activityEasyMathLevel16Ans2">Разность</string>
    <string name="activityEasyMathLevel16Ans3">Уменьшение</string>
    <string name="activityEasyMathLevel16Ans4">Сокращение</string>
    <string name="textMathEasyNumLvl16">Уровень 16</string>
    <string name="activityEasyMathLevelWork17">В\nтреугольнике\nможет\nбыть\n2 прямых\nугла</string>
    <string name="activityEasyMathLevel17Ans1">Правда</string>
    <string name="activityEasyMathLevel17Ans2">Ложь</string>
    <string name="textMathEasyNumLvl17">Уровень 17</string>
    <string name="activityEasyMathLevelWork18">Сколько\nкорней\nимеет\nуравнение:\nx*0=0?</string>
    <string name="activityEasyMathLevel18Ans1">Ноль</string>
    <string name="activityEasyMathLevel18Ans2">Один</string>
    <string name="activityEasyMathLevel18Ans3">Бесконечно\nмного</string>
    <string name="activityEasyMathLevel18Ans4">Бесконечно\nмало</string>
    <string name="textMathEasyNumLvl18">Уровень 18</string>
    <string name="activityEasyMathLevelWork19">Площадь\nквадрата\n64 см².\nЧему\nравен его\nпериметр?</string>
    <string name="activityEasyMathLevel19Ans1">40</string>
    <string name="activityEasyMathLevel19Ans2">16</string>
    <string name="activityEasyMathLevel19Ans3">32</string>
    <string name="activityEasyMathLevel19Ans4">36</string>
    <string name="textMathEasyNumLvl19">Уровень 19</string>
    <string name="activityEasyMathLevelWork20">Единица\nизмерения\nмассы\nдрагоценнх\nкамней это…</string>
    <string name="activityEasyMathLevel20Ans1">карат</string>
    <string name="activityEasyMathLevel20Ans2">центнер</string>
    <string name="activityEasyMathLevel20Ans3">грамм</string>
    <string name="activityEasyMathLevel20Ans4">проба</string>
    <string name="textMathEasyNumLvl20">Уровень 20</string>
    <string name="activityNormalMathLevelWork1">Первая\nкоордината\nточки?</string>
    <string name="activityNormalMathLevel1Ans1">Абсцисса</string>
    <string name="activityNormalMathLevel1Ans2">Ординат</string>
    <string name="activityNormalMathLevel1Ans3">Верных нет</string>
    <string name="activityNormalMathLevel1Ans4">Y</string>
    <string name="activityNormalMathLevelWork2">Сумма\nуглов\nтреугольника?</string>
    <string name="activityNormalMathLevel2Ans1">360°</string>
    <string name="activityNormalMathLevel2Ans2">180°</string>
    <string name="activityNormalMathLevel2Ans3">270°</string>
    <string name="activityEasyGeoLevelWork13">За\nсколько\nвремени\nземля\nобращается\nвокруг\nсолнца?</string>
    <string name="activityEasyGeoLevel13Ans1">Сутки</string>
    <string name="activityEasyGeoLevel13Ans2">Год</string>
    <string name="activityEasyGeoLevel13Ans3">Месяц</string>
    <string name="activityEasyGeoLevel13Ans4">Неделя</string>
    <string name="activityNormalGeoLevelWork4">Где\nнаходится\nсамое\nглубокое\nв мире\nметро?</string>
    <string name="activityNormalGeoLevel4Ans1">Китай</string>
    <string name="activityNormalGeoLevel4Ans2">США</string>
    <string name="activityNormalGeoLevel4Ans3">Россия</string>
    <string name="activityNormalGeoLevel4Ans4">Украина</string>
    <string name="activityHardBioLevelWork7">Соматическая\nнервная\nсистема\nуправляет\nработой…?</string>
    <string name="activityHardBioLevel7Ans1">сердца и\nсосудов</string>
    <string name="activityHardBioLevel7Ans2">кишечника\n</string>
    <string name="activityHardBioLevel7Ans3">почек\n</string>
    <string name="activityHardBioLevel7Ans4">скелетных\nмышц</string>
</resources>