<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".geoLevelsEasy.EasyGeoLevel13">

    <ImageView
        android:id="@+id/imageFoneMathLevel1Easy"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:foregroundGravity="center"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/fone_levels_easy" />

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/container1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/imageBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:fontFamily="@font/bowlby_one_sc"
                android:foregroundGravity="left"
                android:text="@string/Back"
                android:textColor="@color/nameApp"
                android:textSize="40sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textQuestionGeoLevel13"
                style="@style/TextAppName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/rubik_mono_one"
                android:foregroundGravity="center"
                android:gravity="center"
                android:text="@string/activityEasyGeoLevelWork13"
                android:textAllCaps="false"
                android:textColor="@color/nameApp"
                android:textSize="30sp"
                android:textStyle="bold" />

        </LinearLayout>

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/container1"
            android:layout_above="@+id/textMathEasyNumLvl1"
            android:paddingHorizontal="5dp"
            android:paddingVertical="5dp"
            android:scrollbars="none">

            <com.example.quiz.ui.view.ViewAnswers4
                android:id="@+id/answerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:answer1="@string/activityEasyGeoLevel13Ans1"
                app:answer2="@string/activityEasyGeoLevel13Ans2"
                app:answer3="@string/activityEasyGeoLevel13Ans3"
                app:answer4="@string/activityEasyGeoLevel13Ans4"
                app:buttonsColor="@drawable/style_buttons_easy"
                />

        </ScrollView>

        <TextView
            android:id="@+id/textMathEasyNumLvl1"
            style="@style/TextAppName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5sp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/rubik_mono_one"
            android:gravity="center"
            android:text="@string/textMathEasyNumLvl13"
            android:textColor="@color/nameApp"
            android:textSize="25sp"
            android:textStyle="bold" />

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>