<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".dialogwindow.DialogWindowGeoEnh">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_marginRight="10sp"
        android:layout_marginLeft="10sp"
        android:layout_marginTop="150sp"
        android:layout_marginBottom="80sp"
        android:background="@drawable/style_dialog_window"
        >

        <ImageView
            android:id="@+id/imageFoneDialogWindow"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="false"
            android:background="@drawable/fone_easy_act"
            android:cropToPadding="false"
            android:foregroundGravity="center"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            />

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:foregroundGravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/GeolevelEasy"
                    style="@style/TextAppName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50sp"
                    android:fontFamily="@font/rubik_mono_one"
                    android:foregroundGravity="left"
                    android:gravity="center"
                    android:text="@string/Easy"
                    android:textColor="@color/nameApp"
                    android:textSize="45sp" />

                <TextView
                    style="@style/TextAppName"
                    android:id="@+id/GeolevelNormal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp"
                    android:fontFamily="@font/rubik_mono_one"
                    android:foregroundGravity="left"
                    android:gravity="center"
                    android:textColor="@color/normal"
                    android:text="@string/Normal"
                    android:textSize="45sp"
                    />

                <TextView
                    style="@style/TextAppName"
                    android:id="@+id/GeolevelHard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp"
                    android:fontFamily="@font/rubik_mono_one"
                    android:foregroundGravity="left"
                    android:gravity="center"
                    android:text="@string/Hard"
                    android:textColor="@color/hard"
                    android:textSize="45sp" />

            </LinearLayout>

        </RelativeLayout>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>